--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "2.0.3",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.inputsystem": "1.5.1",
     "com.unity.render-pipelines.universal": "15.0.5",
     "com.unity.test-framework": "1.3.3",
     "com.unity.textmeshpro": "3.0.6",
